# learn_lfs

./: .gitattributes  .gitignore  README.md  pyproject.toml
learn_lfs/: main.py
