[tool.poetry]
name = "learn-lfs"
version = "0.1.0"
description = ""
authors = ["mgbvox"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
learn_lfs_get = "learn_lfs.main:main"